crates/typestate-pipeline/tests/ui/nightly/transitions_breakpoint_on_sync.stderr
error: `breakpoint` is only valid on `async fn` transitions
  --> tests/ui/nightly/transitions_breakpoint_on_sync.rs:12:28
   |
12 |     #[transition(into = B, breakpoint)]
   |                            ^^^^^^^^^^
   |
note: this transition is sync
  --> tests/ui/nightly/transitions_breakpoint_on_sync.rs:13:5
   |
13 |     fn noop(state: A) -> B {
   |     ^^
   = help: remove `breakpoint` (sync transitions resolve immediately) or make the transition `async fn`
